syntax = "proto3";

import "google/protobuf/empty.proto";

package rpc_shortener.v1;

option go_package = "github.com/eugene982/url-shortener/proto";

service Shortener {
    rpc Ping(google.protobuf.Empty) returns (PingResponse);
    rpc FindAddr(FindAddrRequest) returns (FindAddrResponse);
    rpc CreateShort(CreateShortRequest) returns (CreateShortResponse);
    rpc BatchShort(BatchRequest) returns (BatchResponse);
    rpc GetUserURLs(UserURLsRequest) returns (UserURLsResponse);
    rpc DelUserURLs(DelUserURLsRequest) returns (google.protobuf.Empty);
}

// Ping
message PingResponse {
    string message = 1;
}

// FindAddr
message FindAddrRequest {
    string short_url = 1;
}

message FindAddrResponse {
    string original_url = 1;
    string error        = 2;
}

// CreateShort
message CreateShortRequest {
    string user         = 1;
    string original_url = 2;
}

message CreateShortResponse {
    string short_url = 1;
    string error     = 2;
}

// Batch
message BatchRequest {
    message Batch {
        string correlation_id = 1;
        string original_url   = 2;
    }
    string user            = 1;
    repeated Batch request = 2; 
}

message BatchResponse {
    message Batch {
        string correlation_id = 1;
        string short_url      = 2;
    }
    repeated Batch responce = 1;
    string error            = 2;
}

// UserURLs
message UserURLsRequest {
    string user = 1;
}

message UserURLsResponse {
    message UserURL{
        string original_url = 1;
        string short_url    = 2;
    }
    repeated UserURL response = 1;
    string error = 2;
}

// Del user urls
message DelUserURLsRequest {
    string user               = 1;
    repeated string short_url = 2;    
}

